200-04-07  Lauris Kaplinski  <lauris@ariman.ee>

	* sodipodi.gnorba: added this, embeddable document will follow soon
	* configure.in: added bonobo check
	
200-04-07  Lauris Kaplinski  <lauris@ariman.ee>

	* sp-shape.c: It prints now semitransparent shapes, rendering these
          to bitmaps. No clipping yet and resolution is hardcoded to 72dpi
	
200-04-05  Kjartan Maraas  <kmaraas@online.no>

	* no.po: Added no to ALL_LINGUAS.
	
2000-04-05  Lauris Kaplinski <lauris@ariman.ee>

    * sp-document.c, sp-file.c, sp-image.c: removed namespace. How to
      extract this correctly from libxml?

2000-04-05  Lauris Kaplinski <lauris@ariman.ee>

    * xml/repr.c: added order_changed_pre callback
    * document-undo.c: stacking order changes are now undoable
    * sp-document.c, sp-file.c, sp-image.c: added namespace "sodipodi",
      still have to do official definition

2000-04-04  Lauris Kaplinski <lauris@ariman.ee>

    * xml/repr-io.c: save DTD & standard header
    * dialogs/object-*: modify default fill & stroke, if nothing selected

2000-04-04  Lauris Kaplinski <lauris@ariman.ee>

    * selection.*: Added functions to select via reprs (now when we have
      unique id-s there isn't any reason thare wasn't such)

2000-04-02  Lauris Kaplinski <lauris@ariman.ee>

    * xml/repr-io.c: A very quick hack to load real svg code (DTD & stuff).
    * sp-shape.c: Fixed bug in exporting open paths, so they are not filled
      anymore.
    * sp-image.c: We can print semitransparent images, although better do not
      stretch these very much

2000-04-02  Lauris Kaplinski <lauris@ariman.ee>

    * document-undo.c, document.c: Undo should now work!

2000-04-01  Lauris Kaplinski <lauris@ariman.ee>

    * document.c: Some undoing/redoing works (duplicate & delete)

2000-04-01  Lauris Kaplinski <lauris@ariman.ee>

    * sp-item-group.c: cleaned up signals, reordering should work now
    * hunted memory leaks & removed most obvious ones
