@@ -1,0 +1,3 @@
+#define SODIPODI_BONOBO_C
+
+#include "sodipodi-bonobo.h"
