@@ -1,0 +1,6 @@
+#ifndef SP_SVG_DOC_FACTORY_H
+#define SP_SVG_DOC_FACTORY_H
+
+void sp_svg_doc_factory_init (void);
+
+#endif
